--- a/package.json
+++ b/package.json
@@ -3,19 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@apollo/client": "^3.6.9",
+    "@emotion/cache": "^11.10.3",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@material-table/core": "^5.0.5",
     "@material-ui/core": "^4.12.4",
+    "@mui/lab": "^5.0.0-alpha.96",
+    "@mui/material": "^5.10.2",
+    "@mui/styles": "^5.10.2",
+    "@react-ui-org/react-ui": "^0.48.0",
+    "antd": "^4.22.7",
+    "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "chart.js": "^3.9.1",
     "cra-template": "1.2.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.25",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^4.4.0",
+    "react-number-format": "^4.9.3",
     "react-pin-input": "^1.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "reactstrap": "^9.1.3",
+    "shortid": "^2.2.14",
+    "simplebar-react": "^2.4.1",
     "sweetalert2": "^11.4.26",
     "sweetalert2-react-content": "^5.0.2",
     "web-vitals": "^2.1.4",
