--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
     "cra-template": "1.2.0",
+    "graphql": "^16.6.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.25",
     "prop-types": "^15.8.1",
